--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: base
         <hr class="mb-0">
         <div class="d-flex flex-wrap justify-content-end">
           <a class="btn btn-outline-light btn-sm mt-3" href="{{ site.repo }}" target="_blank">
-            <i class="material-icons mr-2">code</i>Fork me on GitHub
+            <i class="material-icons mr-2">code</i>Fork me on GitHub 1
           </a>
           <a class="btn btn-outline-light btn-sm mt-3" href="http://www.daemon.com.au/" target="_blank">
             <i class="material-icons mr-2 text-danger">favorite</i>Made by Daemon
